# pkg/handler/handler.go
@@ -1,0 +1,35 @@
+package handler
+
+import (
+	"github.com/gin-gonic/gin"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
+	_ "task_manager/docs"
+	"task_manager/pkg/service"
+)
+
+type Handler struct {
+	services *service.Service
+}
+
+func NewHandler(services *service.Service) *Handler {
+	return &Handler{services: services}
+}
+
+func (h *Handler) InitRoutes() *gin.Engine {
+	router := gin.New()
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+	api := router.Group("/api", h.userIdentity)
+	{
+		tasks := api.Group("/tasks")
+		{
+			tasks.POST("/", h.createTask)
+			tasks.GET("/", h.getAllTasks)
+			tasks.DELETE("/:id", h.deleteTask)
+			tasks.GET("/:id", h.getTaskById)
+			tasks.PUT("/:id", h.updateTask)
+		}
+	}
+	return router
+}
